# PythonFMU

./: .gitignore  CMakeLists.txt  Fmi2Slave.py  LICENSE  MANIFEST.in  README.md  build.gradle  environment.yml  fmi2slave.py  model.py  requirements.txt  settings.gradle  setup.cfg  setup.py
.github/workflows/: gradle.yml  main.yml  publish.yml
binder/: environment.yml  postBuild
doc/: dependency.xlsx
doc/source/: conf.py  index.rst  modules.rst
examples/: demo.ipynb  demoslave.py  mldemo.py
examples/tensorflow-model-export/: sin-approximation.ipynb
fmi-native-export/: CMakeLists.txt  build.gradle
fmi-native-export/src/main/cpp/: PyObjectWrapper.cpp  SlaveInstance.cpp  hello_world.cpp  jni_model_description_provider.cpp  thread_worker.cpp
fmi-native-export/src/main/headers/cppfmu/: cppfmu_common.hpp  cppfmu_cs.hpp
fmi-native-export/src/main/headers/pythonfmu/: PyObjectWrapper.hpp  PythonState.hpp  SlaveInstance.hpp
fmu-builder/: build.gradle  settings.gradle
fmu-builder/src/main/kotlin/no/ntnu/ihb/fmi4j/: FmuBuilder.kt
fmu-builder/src/main/kotlin/no/ntnu/ihb/pythonfmu/: FmuBuilder.kt
fmu-builder/src/main/kotlin/no/ntnu/ihb/pythonfmu/util/: ModelDescriptionFetcher.kt  OsUtil.kt
fmu-builder/src/main/resources/: Fmi2Slave.py  model.py
fmu-builder/src/test/kotlin/no/ntnu/ihb/fmi4j/: TestBuilder.kt
fmu-builder/src/test/kotlin/no/ntnu/ihb/pythonfmu/: TestBuilder.kt
fmu-builder/src/test/resources/: Fmi2Slave.py  python_slave.py  pythonslave.py
fmu-builder/src/test/resources/pythonfmu/: Fmi2Slave.py
pythonfmu/: __init__.py  __main__.py  _version.py  builder.py  csvbuilder.py  csvslave.py  default_experiment.py  deploy.py  enums.py  fmi2slave.py  logmsg.py  variables.py
pythonfmu-builder/: build.gradle  settings.gradle
pythonfmu-builder/src/main/kotlin/no/ntnu/ihb/pythonfmu/: FmuBuilder.kt
pythonfmu-builder/src/test/kotlin/no/ntnu/ihb/pythonfmu/: TestBuilder.kt
pythonfmu-builder/src/test/resources/: pythonslave.py
pythonfmu-export/: .clang-format  CMakeLists.txt
pythonfmu-export/src/main/: CMakeLists.txt
pythonfmu-export/src/main/cpp/: PyObjectWrapper.cpp  SlaveInstance.cpp  fmi_functions.cpp  model_description_provider.cpp
pythonfmu-export/src/main/headers/pythonfmu/: PyException.hpp  PyObjectWrapper.hpp  PythonState.hpp  SlaveInstance.hpp  thread_worker.hpp
pythonfmu/pythonfmu-export/: CMakeLists.txt  build_unix.sh  build_win.sh
pythonfmu/pythonfmu-export/cpp/: PyObjectWrapper.cpp  PySlaveInstance.cpp  SlaveInstance.cpp  fmi_functions.cpp  logging.cpp  pylog.cpp
pythonfmu/pythonfmu-export/headers/cppfmu/: cppfmu_common.hpp  cppfmu_cs.hpp
pythonfmu/pythonfmu-export/headers/pythonfmu/: PyException.hpp  PyObjectWrapper.hpp  PySlaveInstance.hpp  PyState.hpp  SlaveInstance.hpp  callbacks.cpp
pythonfmu/pythonfmu-export/src/: CMakeLists.txt
pythonfmu/pythonfmu-export/src/cppfmu/: cppfmu_cs.cpp  fmi_functions.cpp
pythonfmu/pythonfmu-export/src/pythonfmu/: IPyState.hpp  Logger.hpp  PySlaveInstance.cpp  PySlaveInstance.hpp  PyState.hpp  SlaveInstance.hpp  fmi2.cpp  fmi_functions.cpp
pythonfmu/tests/: csvdemo.csv  pythonslave.py  test_builder.py  test_csvslave.py  test_default_experiment.py  test_deploy.py  test_fmi2slave.py  test_integration.py  test_logger.py  test_multiple_fmus.py  test_python_extension.py  test_variables.py
pythonfmu/tests/slaves/: pythonslave_default_ex.py  pythonslave_read_file.py
recipe/: meta.yaml
src/: CMakeLists.txt
src/pythonfmu/: Logger.hpp  PyState.hpp  fmu_except.hpp
tmp-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pythonfmu-export.sln
tmp-build/src/: cmake_install.cmake  pythonfmu-export.vcxproj  pythonfmu-export.vcxproj.filters
tmp-build/src/Release/: pythonfmu-export.exp  pythonfmu-export.lib
tmp-build/src/pythonfmu-export.dir/Debug/: objects.txt
tmp-build/src/pythonfmu-export.dir/MinSizeRel/: objects.txt
tmp-build/src/pythonfmu-export.dir/RelWithDebInfo/: objects.txt
tmp-build/src/pythonfmu-export.dir/Release/: exports.def  objects.txt  pythonfmu-export.dll.recipe
tmp-build/src/pythonfmu-export.dir/Release/pythonfmu-export.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pythonfmu-export.lastbuildstate  pythonfmu-export.write.1u.tlog
tmp-build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
tmp-build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tmp-build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
tmp-build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
