[metadata]
name = pythonfmu
version = attr: pythonfmu._version.__version__
author = NTNU-IHB
home-page = https://github.com/NTNU-IHB/PythonFMU
description = A lightweight framework that enables the packaging of Python3.x code as co-simulation FMUs.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
keywords = FMI
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: C++
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering

[options]
packages = find:

[options.entry_points]
console_scripts = 
	pythonfmu-builder = pythonfmu.builder